<resources>
    <!--UI STRINGS !-->
    <string name="app_name">Loo App</string>
    <!--Login strings!-->
    <string name="tag_line">Find a toilet for a quick business</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="btn_login_account">Login</string>
    <string name="login_text_display">Welcome back!</string>
    <string name="login_question">Don\'t have an account yet?</string>
    <string name="login_instruction">Enter your username and password to access your account.</string>
    <!--Reg Strings!-->
    <string name="reg_welcome">Welcome ,</string>
    <string name="reg_question">Already have an account?</string>
    <string name="reg_instruction">Please enter valid information to access your account</string>
    <string name="reg_username">Username </string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_match">Repeat Password</string>
    <string name="registration_text_display">Register</string>
    <!--Map box access token-->
    <string name="mapbox_access_token">sk.eyJ1IjoiZG1tb3J0YWwiLCJhIjoiY2xsMTJhaDVxMDQzeDNxcDUxZmg4MTFveiJ9.Q7cnCTI4UotckcEmc8hxUw</string>
    <!--Bottom Bar navigation!-->
    <string name="nav_explore">Explore</string>
    <string name="nav_near">Near Me</string>
    <string name="nav_transact">Transact</string>
    <string name="nav_contribute">Contribute</string>
    <!--Toilet Buttons-->
    <string name="btn_disabled_access">Disabled Access</string>
    <string name="btn_required_fee">Requires Fee</string>
    <string name="btn_required_key">Requires Key</string>
    <!--Contribute fill up text box-->
    <string name="text_location">Name of the Place</string>
    <string name="text_street">Street</string>
    <string name="text_city">City</string>
    <string name="text_country">Country</string>
    <string name="text_state">State (Optional)</string>
    <string name="text_description">Kindly provide directions on how can go here (Optional)</string>
    <string name="text_comments">Comments</string>
    <string name="text_accessible">Is the restroom accessible to all?</string>
    <string name="text_unisex">Is this toilet designed for use by any gender?</string>
    <string name="text_change">Does it equipped a changing table?</string>
    <string name="btn_submit">Submit Request</string>
    <!--Button to request adding location!-->
    <string name="btn_request_add">Add Restroom</string>
    <!--added from sampleBern !-->
    <string name="content_description_close">Description</string>
    <!-- For transaction fragment!-->
    <string name="rad_donate">Donate</string>
    <string name="rad_pay">Payment</string>
    <string name="trans_history">Transaction History</string>
    <!--for explore fragment!-->
    <string name="discover_search_nearby">Search</string>
    <string name="discover_search_in_area">Search for selected area</string>
    <string name="discover_search_error">Error happened during search request</string>
    <!--Ratings-->

</resources>