<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/blue_1"
    tools:context=".Screens.Login">

    <ImageView
        android:id="@+id/imgDisplayLogIn"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDisplayLogGreeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:text="@string/login_text_display"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDisplayLogIn"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:background="@drawable/custom_border_layout"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtLogInstruction"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLogInstruction"
        app:layout_constraintTop_toBottomOf="@+id/txtLogInstruction" />

    <EditText
        android:id="@+id/editTxtPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"

        android:background="@drawable/custom_border_layout"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTxtEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_border_layout"
        android:backgroundTint="@color/blue"
        android:elevation="3dp"
        android:fontFamily="@font/poppins"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_login_account"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorLink="@color/dark_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTxtPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPass" />

    <TextView
        android:id="@+id/txtLogInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:paddingStart="12dp"
        android:text="@string/login_instruction"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/txtDisplayLogGreeting"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDisplayLogGreeting"
        app:layout_constraintTop_toBottomOf="@+id/txtDisplayLogGreeting" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/poppins"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/registration_text_display"
        android:textColor="@color/dark_blue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txtLogQuestion"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtLogQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login_question"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtRegister"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.589" />

</androidx.constraintlayout.widget.ConstraintLayout>