<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
         name="registerViewModel"
             type="com.example.looapp.viewModel.RegistrationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        tools:context=".Screens.Registration">

        <ImageView
            android:id="@+id/imgMapDisplay"
            android:layout_width="250dp"
            android:layout_height="176dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/register"
            android:scaleType="fitStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGreeting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/reg_welcome"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMapDisplay" />

        <TextView
            android:id="@+id/txtRegInstruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/reg_instruction"
            android:textColor="@color/grey"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/txtGreeting"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtGreeting"
            app:layout_constraintTop_toBottomOf="@+id/txtGreeting" />

        <EditText
            android:id="@+id/edtTxtUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_border_layout"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/reg_username"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtEmailAddress"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtEmailAddress"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtTxtEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_border_layout"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/txtRegInstruction"
            app:layout_constraintStart_toStartOf="@+id/txtRegInstruction"
            app:layout_constraintTop_toBottomOf="@+id/txtRegInstruction" />

        <EditText
            android:id="@+id/edtTxtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_border_layout"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtUserName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtUserName"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtUserName" />

        <EditText
            android:id="@+id/edtTxtPasswordMatch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_border_layout"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/reg_password_match"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtPassword"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtPassword"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_border_layout"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/registration_text_display"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/edtTxtPasswordMatch"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtTxtPasswordMatch"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtPasswordMatch" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:text="@string/btn_login_account"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtQuestion"
            app:layout_constraintEnd_toEndOf="@+id/btnRegister"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txtQuestion" />

        <TextView
            android:id="@+id/txtQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:text="@string/reg_question"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnRegister"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister"
            app:layout_constraintVertical_bias="0.809" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>