<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.ExploreFragment">

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="394dp"
            android:layout_height="310dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333"
            app:mapbox_cameraTargetLat="59.31"
            app:mapbox_cameraTargetLng="18.06"
            app:mapbox_cameraZoom="15.0" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTxtLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:hint="@string/text_location"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTxtCompleteAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:hint="@string/text_complete_address"
                    android:inputType="text"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="@+id/editTxtLocation"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTxtLocation"
                    app:layout_constraintTop_toBottomOf="@+id/editTxtLocation" />

                <Button
                    android:id="@+id/btnRequestAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_request_add"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintTop_toBottomOf="@+id/btnRequireFree"
                    app:layout_constraintVertical_bias="0.712" />

                <Button
                    android:id="@+id/btnDisabledAccess"
                    android:layout_width="110dp"
                    android:layout_height="61dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_disabled_access"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextMultiLine"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

                <Button
                    android:id="@+id/btnRequireFree"
                    android:layout_width="110dp"
                    android:layout_height="61dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/btn_required_fee"
                    app:layout_constraintStart_toEndOf="@+id/btnDisabledAccess"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

                <Button
                    android:id="@+id/btnRequireKey"
                    android:layout_width="110dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/btn_required_key"
                    app:layout_constraintEnd_toEndOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintHorizontal_bias="0.566"
                    app:layout_constraintStart_toEndOf="@+id/btnRequireFree"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="78dp"
                    android:layout_marginTop="12dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/text_description"
                    android:inputType="textMultiLine"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintTop_toBottomOf="@+id/editTxtCompleteAddress"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>